# Group9

./: Readme.txt
readest/readest-main/: .gitignore  .gitmodules  .prettierrc.json  CONTRIBUTING.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.json
readest/readest-main/.github/: FUNDING.yml
readest/readest-main/.github/workflows/: pull-request.yml  release.yml  upload-to-r2.yml  vercel-merge.yml
readest/readest-main/apps/readest-app/: .env  .env.local.example  eslint.config.mjs  i18next-scanner.config.js  next.config.mjs  package.json  release-notes.json  tailwind.config.ts  tsconfig.json  vitest.setup.ts  wrangler.toml
readest/readest-main/apps/readest-app/public/.well-known/: assetlinks.json
readest/readest-main/apps/readest-app/scripts/: release-google-play.sh
readest/readest-main/apps/readest-app/src/: middleware.ts
readest/readest-main/apps/readest-app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
readest/readest-main/apps/readest-app/src-tauri/capabilities/: default.json  desktop.json
readest/readest-main/apps/readest-app/src-tauri/src/: lib.rs  transfer_file.rs
readest/readest-main/apps/readest-app/src/app/: error.tsx  layout.tsx  page.tsx
readest/readest-main/apps/readest-app/src/components/: AboutWindow.tsx  BookCover.tsx  Button.tsx  Dialog.tsx  Link.tsx  (+18 more)
readest/readest-main/apps/readest.koplugin/: _meta.lua  main.lua  readest-sync-api.json  readestsync.lua  supabase-auth-api.json
readest/readest-main/data/metainfo/: com.bilingify.readest.appdata.xml
readest/readest-main/fastlane/: Appfile  Fastfile  README.md
(+366 files in other folders)
